--- a/src/components/logo-cloud/logo-cloud.styles.css
+++ b/src/components/logo-cloud/logo-cloud.styles.css
@@ -1,3 +1,7 @@
+.skills-section {
+  height: 100vh;
+}
+
 .list-logo {
   filter: grayscale(0%);
 }
@@ -10,7 +14,6 @@
 
 .container {
   padding-top: 8vh;
-  height: 95vh;
   text-align: center;
   overflow: hidden;
   margin: 0%;
@@ -22,14 +25,14 @@
   gap: 0px 0px;
   grid-auto-flow: row;
   grid-template-areas:
-    ". . l21 l7  l8  l9  l10 l11 l12 . .  "
-    ". . l1  grid-image grid-image grid-image grid-image grid-image   l13 . . "
-    ". . l2  grid-image grid-image grid-image grid-image grid-image   l14 . ."
-    ". . l3  grid-image grid-image grid-image grid-image grid-image l15 . ."
-    ". . l4 grid-image grid-image grid-image grid-image grid-image  l16 . ."
-    ". . l5  grid-image grid-image grid-image grid-image grid-image  l17 . ."
-    ". . l6  grid-image grid-image grid-image grid-image grid-image   l18 . ."
-    ". . . . l19 .  .  l20 . . . ";
+    '. . l21 l7  l8  l9  l10 l11 l12 . .  '
+    '. . l1  grid-image grid-image grid-image grid-image grid-image   l13 . . '
+    '. . l2  grid-image grid-image grid-image grid-image grid-image   l14 . .'
+    '. . l3  grid-image grid-image grid-image grid-image grid-image l15 . .'
+    '. . l4 grid-image grid-image grid-image grid-image grid-image  l16 . .'
+    '. . l5  grid-image grid-image grid-image grid-image grid-image  l17 . .'
+    '. . l6  grid-image grid-image grid-image grid-image grid-image   l18 . .'
+    '. . . . l19 .  .  l20 . . . ';
 }
 .grid-image {
   grid-area: grid-image;
@@ -109,7 +112,6 @@
 @media screen and (max-width: 800px) {
   .container {
     display: none;
-    height: 100vh;
     padding: 0;
     margin: 0;
   }
@@ -129,15 +131,25 @@
     display: flex;
     flex-wrap: wrap;
     width: 80vw;
+    z-index: 2;
+    margin-right: -30px;
   }
 
   .mobile-logo {
-    margin-right: 20px;
-    margin-top: 10px;
+    margin-right: 25px;
+  }
+
+  .mobile-logo:nth-child(even) {
+    padding: 5px;
+  }
+
+  .mobile-logo:nth-child(odd) {
+    padding: 2px;
   }
 
   .grid-image {
-    margin-top: -130px;
+    margin-top: -80px;
+    margin-bottom: 10px;
     width: 80vw;
     height: 60vh;
   }
